[package]
name = "pvr"
version = "0.1.0"
authors = ["codeonwort <codeonwort@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.9"
rayon = "1.1"
druid = { version = "0.7.0", features = ["image"] }
