[package]
name = "pvrapp"
version = "0.1.0"
authors = ["codeonwort <codeonwort@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.9"
druid = { version = "0.8.2", features = ["image"] }
native-dialog = { version = "0.5.5", features = ["windows_dpi_awareness", "windows_visual_styles"] }
sys-info = "0.9.1"
pvrlib = { path = "../pvrlib" }
